# informix-pyodbc-connector

./: .env  .gitignore  LICENSE  README.md
api/: informix_connection.py  informix_operations.py  main.py  pyproject.toml  socket_conn_test.py
api/linux_64_driver_lib/ODBC_64bit/: DDODBC.LIC  license.txt  odbc.csh  odbc.ini  odbc.sh  odbcinst.ini
api/linux_64_driver_lib/ODBC_64bit/FIXES/: fixes8.0.txt
api/linux_64_driver_lib/ODBC_64bit/NOTICES/: ODBC for Informix v8.0 notices.txt
api/linux_64_driver_lib/ODBC_64bit/READMES/: ODBC for Informix v8.0 readme.txt
api/linux_64_driver_lib/ODBC_64bit/help/: DataDirect Connector Documentation Help.html  InformixHelp.html
api/linux_64_driver_lib/ODBC_64bit/include/: odbcinst.h  qesqlext.h  sqlunx.h
api/linux_64_driver_lib/ODBC_64bit/install/: .psc_dd_inst_reg.xml  installed_drivers.properties
api/linux_64_driver_lib/ODBC_64bit/samples/bulk/: bulk  bulk.c  bulk.mak
api/linux_64_driver_lib/ODBC_64bit/samples/bulkstrm/: bulk.cpp  bulkstrm  ddlogging.properties  streambulk.mak
api/linux_64_driver_lib/ODBC_64bit/samples/example/: example  example.c  example.h  example.mak
api/linux_64_driver_lib/ODBC_64bit/samples/trn/: Makefile  translat.c
api/linux_64_driver_lib/ODBC_64bit/tools/: ddencpwd  ddextu  ddprocinfo
api/linux_64_driver_lib/ODBC_64bit/uninstall/: .com.zerog.registry.xml  .psc_dd_uninst_reg.xml  installvariables.properties  uninstall_ODBC.lax
api/linux_64_driver_lib/ODBC_64bit/uninstall/informix/: .com.zerog.registry.xml  InstallScript.iap_xml  installvariables.properties  uninstall_informix  (+1 more)
(+3 files in other folders)
