[tool.poetry]
name = "informix-pyodbc-connector"
version = "0.1.0"
description = "Informix Pyodbc connector"
authors = ["Soufiane Amghar <soufiane35.live@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyodbc = "^5.2.0"
dotenv = "^0.9.9"
loguru = "^0.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"